<resources>

    <!--general-->
    <string name="app_name">Grouply</string>
    <string name="single_act_name">Single Group</string>
    <string name="preference_file_key">com.firsttread.grouply.presenter.PREFERENCE_KEY</string>
    <string name="does_save_exist">saveExists</string>
    <string name="act_title">activity_title</string>

    <!--control fragment buttons/actions-->
    <string name="button_clear">Clear</string>
    <string name="button_save">Save</string>
    <string name="button_flip">Flip Order</string>
    <string name="button_random">Random</string>
    <string name="button_last">Last Name</string>
    <string name="button_first">First Name</string>
    <string name="button_add_group">Load</string>
    <string name="button_email">Email</string>

    <!--toolbar/overflow-->
    <string name="action_add">Add</string>
    <string name="action_import">Import Group</string>
    <string name="action_clear">Delete All Groups</string>
    <string name="action_delete_group">Delete Group</string>
    <string name="action_settings">Settings</string>

    <!--dialogs-->
    <string name="add_group_title">Select a Group</string>
    <string name="text_enter_name">Enter Name</string>
    <string name="button_done">Done</string>
    <string name="button_cancel">Cancel</string>
    <string name="enter_name_reminder">Use single space if adding last name.</string>

    <!--settings activity-->
    <string name="choose_button_label">Select</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="title_activity_settings">Settings</string>
    <string name="directory_hint">Where are you files most often?</string>
    <string name="change_directory">Change Directory</string>
    <string name="default_directory">sdcard/</string>

</resources>
