<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_item"
        android:orderInCategory="1"
        android:icon="@drawable/ic_add"
        android:title="@string/action_add"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete_group"
        android:orderInCategory="96"
        android:title="@string/action_delete_group"
        app:showAsAction="never"/>

    <item
        android:id="@+id/clear_groups"
        android:orderInCategory="97"
        android:title="@string/action_clear"
        app:showAsAction="never"/>

    <item
        android:id="@+id/import_group"
        android:orderInCategory="98"
        android:title="@string/action_import"
        app:showAsAction="never"/>

    <item
        android:id="@+id/settings"
        android:orderInCategory="99"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>