<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#303f9f"
    android:padding="16dp">


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sort_first"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:stateListAnimator="@animator/lift_on_touch"
        android:clickable="true"
        card_view:cardBackgroundColor="#5c6bc0"
        card_view:cardElevation="@dimen/cardview_default_elevation"
        card_view:cardCornerRadius="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/button_first"
            android:textColor="#ffffff"
            android:id="@+id/text_first"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sort_last"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:stateListAnimator="@animator/lift_on_touch"
        android:clickable="true"
        card_view:cardBackgroundColor="#5c6bc0"
        card_view:cardElevation="@dimen/cardview_default_elevation"
        card_view:cardCornerRadius="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/button_last"
                android:textColor="#ffffff"
                android:id="@+id/text_last"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sort_random"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:stateListAnimator="@animator/lift_on_touch"
        android:clickable="true"
        card_view:cardBackgroundColor="#5c6bc0"
        card_view:cardElevation="@dimen/cardview_default_elevation"
        card_view:cardCornerRadius="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/button_random"
                android:textColor="#ffffff"
                android:id="@+id/text_random"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sort_flip"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:stateListAnimator="@animator/lift_on_touch"
        android:clickable="true"
        card_view:cardBackgroundColor="#5c6bc0"
        card_view:cardElevation="@dimen/cardview_default_elevation"
        card_view:cardCornerRadius="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/button_flip"
                android:textColor="#ffffff"
                android:id="@+id/text_flip"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/save"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:stateListAnimator="@animator/lift_on_touch"
        android:clickable="true"
        card_view:cardBackgroundColor="#5c6bc0"
        card_view:cardElevation="@dimen/cardview_default_elevation"
        card_view:cardCornerRadius="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/button_save"
                android:textColor="#ffffff"
                android:id="@+id/text_save"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/print"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:stateListAnimator="@animator/lift_on_touch"
        android:clickable="true"
        card_view:cardBackgroundColor="#5c6bc0"
        card_view:cardElevation="@dimen/cardview_default_elevation"
        card_view:cardCornerRadius="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/button_print"
                android:textColor="#ffffff"
                android:id="@+id/text_print"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>